--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <div id="app">
         <ul>
-            <li v-for="(email, i) in mailArray">
+            <li v-for="(email, i) in mailArray" v-if="mailArray.length == 10">
                 {{email}}
             </li>
         </ul>
